Munging source, to enable manifest export of these files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,14 @@ find_package(Boost COMPONENTS
   )
 find_package(PythonLibs REQUIRED)
 
-macro(bpmodule NAME)    
-    
+set(GEN_DIR_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/munged)
+set(BP_MSG_MODULE_NAME bp_ros_msgs)
+set(BP_CONVERTER_MODULE_NAME bp_bridge)
+
+file(WRITE ${GEN_DIR_ROOT}/${BP_MSG_MODULE_NAME}/__init__.py "\n")
+file(WRITE ${GEN_DIR_ROOT}/${BP_CONVERTER_MODULE_NAME}/__init__.py "\n")
+
+macro(bpmodule NAME)
     include_directories(
       ${PYTHON_INCLUDE_PATH}
       ${Boost_INCLUDE_DIRS}
@@ -21,10 +27,11 @@ macro(bpmodule NAME)
     rosbuild_add_library(${NAME}
       ${ARGN}
     )
-      
+    
     set_target_properties(${NAME}
       PROPERTIES
       OUTPUT_NAME ${NAME}
+      LIBRARY_OUTPUT_DIRECTORY ${GEN_DIR_ROOT}/${BP_MSG_MODULE_NAME}
       PREFIX ""
     )
     
@@ -35,13 +42,18 @@ macro(bpmodule NAME)
 endmacro()
 
 macro(message_gen_wrap ROS_PACKAGE)
-    set(GEN_DIR ${CMAKE_CURRENT_BINARY_DIR}/${ROS_PACKAGE})
-    #if(NOT ${ROS_PACKAGE}_srcs_cache)
-        execute_process(COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/scripts/generate_pkg_bindings.py ${ROS_PACKAGE} ${GEN_DIR}
-        )
-    #    set(${ROS_PACKAGE}_srcs_cache ${ROS_PACKAGE}_srcs CACHE STRING "${ROS_PACKAGE} generated files")
-    #endif()
+    set(GEN_DIR ${CMAKE_CURRENT_BINARY_DIR}/${ROS_PACKAGE}) #this is for generated cpp files.
+    set(GEN_PY_DIR ${GEN_DIR_ROOT}/${BP_CONVERTER_MODULE_NAME}/${ROS_PACKAGE})
+    #generate an __init__.py fiile in the binary dir.
+    file(WRITE ${GEN_PY_DIR}/__init__.py "\n")
+    execute_process(COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/scripts/generate_pkg_bindings.py
+      --package=${ROS_PACKAGE}
+      --cpp_target_dir=${GEN_DIR}
+      --py_target_dir=${GEN_PY_DIR}
+    )
+
     file(GLOB ${ROS_PACKAGE}_srcs  ${GEN_DIR}/*.cpp)
+    
     bpmodule(${ROS_PACKAGE}
         ${${ROS_PACKAGE}_srcs}
     )
