--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,14 @@ find_package(Boost COMPONENTS
   )
 find_package(PythonLibs REQUIRED)
 
-set(GEN_DIR_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/munged)
-set(BP_MSG_MODULE_NAME bp_ros_msgs)
-set(BP_CONVERTER_MODULE_NAME bp_bridge)
 
-file(WRITE ${GEN_DIR_ROOT}/${BP_MSG_MODULE_NAME}/__init__.py "\n")
-file(WRITE ${GEN_DIR_ROOT}/${BP_CONVERTER_MODULE_NAME}/__init__.py "\n")
+set(GEN_DIR_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/munged/${PROJECT_NAME}_bp)
+set(GEN_SHARED_LIBRARY_DIR ${GEN_DIR_ROOT}/bindings)
+set(GEN_PYTHON_ROOT ${GEN_DIR_ROOT}/conversions)
+
+file(WRITE ${GEN_DIR_ROOT}/__init__.py "\n")
+file(WRITE ${GEN_SHARED_LIBRARY_DIR}/__init__.py "\n")
+file(WRITE ${GEN_PYTHON_ROOT}/__init__.py "\n")
 
 macro(bpmodule NAME)
     include_directories(
@@ -31,7 +33,7 @@ macro(bpmodule NAME)
     set_target_properties(${NAME}
       PROPERTIES
       OUTPUT_NAME ${NAME}
-      LIBRARY_OUTPUT_DIRECTORY ${GEN_DIR_ROOT}/${BP_MSG_MODULE_NAME}
+      LIBRARY_OUTPUT_DIRECTORY ${GEN_SHARED_LIBRARY_DIR}
       PREFIX ""
     )
     
@@ -43,13 +45,12 @@ endmacro()
 
 macro(message_gen_wrap ROS_PACKAGE)
     set(GEN_DIR ${CMAKE_CURRENT_BINARY_DIR}/${ROS_PACKAGE}) #this is for generated cpp files.
-    set(GEN_PY_DIR ${GEN_DIR_ROOT}/${BP_CONVERTER_MODULE_NAME}/${ROS_PACKAGE})
-    #generate an __init__.py fiile in the binary dir.
-    file(WRITE ${GEN_PY_DIR}/__init__.py "\n")
+
     execute_process(COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/scripts/generate_pkg_bindings.py
       --package=${ROS_PACKAGE}
       --cpp_target_dir=${GEN_DIR}
-      --py_target_dir=${GEN_PY_DIR}
+      --py_target_dir=${GEN_PYTHON_ROOT}
+      --current_package=${PROJECT_NAME}
     )
 
     file(GLOB ${ROS_PACKAGE}_srcs  ${GEN_DIR}/*.cpp)
@@ -59,5 +60,5 @@ macro(message_gen_wrap ROS_PACKAGE)
     )
 endmacro()
 
-message_gen_wrap(sensor_msgs)
 message_gen_wrap(geometry_msgs)
+message_gen_wrap(sensor_msgs)
